--- a/.gitignore
+++ b/.gitignore
@@ -3,10 +3,12 @@
 .RData
 .Ruserdata
 .Rapp.history
-.pdf
-.bbl
-.cls
-.csl
-.docx
-.html
-.png
+*.pdf
+*.bbl
+*.cls
+*.csl
+*.docx
+*.html
+*.png
+*.tex
+*.log
