--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@
 .RData
 .Ruserdata
 .Rapp.history
+.DS_Store
 *.pdf
 *.bbl
 *.cls
@@ -12,5 +13,6 @@
 *.png
 *.tex
 *.log
-.bib
+*.bib
 *.RData
+*.csv
